# biochat

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_local  README.md  app.py  chart_handler.py  function_declarations.py  function_handler.py  logging_config.py  prompts copy.md  prompts.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml
app/: biochat.py  exceptions.py  function_selector.py  main.py  response_handler.py
app/handlers/: base_handler.py  chart_handler.py  correlation_handler.py  d3js_visualization.py  earth_engine_handler.py  endangered_species_handler.py  forest_handler.py  forest_handler_ee.py  forest_viz.py  function_handler.py  human_modification_handler_ee.py  human_modification_viz.py  query_builder.py  species_handler.py
app/models/: function_declarations.py
app/tools/: base_handler.py  function_handler.py  help_command_handler.py  help_system.py  message_bus.py  tool.py
app/tools/correlation_tool/: __init__.py  correlation_tool.py
app/tools/correlation_tool/handlers/: __init__.py  correlation_handler.py
app/tools/earth_engine_tool/: __init__.py  earth_engine_tool.py
app/tools/earth_engine_tool/handlers/: __init__.py  climate_analyzer.py  earth_engine_handler.py  forest_handler.py  habitat_analyzer.py  (+2 more)
app/tools/search_tool/: __init__.py  search_tool.py
app/tools/species_tool/: __init__.py  species_tool.py
app/tools/visualization/: __init__.py  base.py  chart_handler.py  chart_types.py  factory.py  renderer_registry.py
app/utils/: alpha_shape_utils.py  logging_config.py
scripts/: convert.py  convert_dist.py
(+29 files in other folders)
