[project]
name = "biodiversity-chatbot"
version = "0.1.0"
description = "Biodiversity Chatbot"
authors = [
    { name = "Csaba Boros", email = "csaba.boros@outlook.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "google-cloud-bigquery>=3.27.0",
    "setuptools>=75.6.0",
    "pygbif>=0.6.5",
    "langchain==0.3.9",
    "langchain-community==0.3.9",
    "langchain_google_community>=2.0.3",
    "EcoNameTranslator>=2.1",
    "streamlit>=1.42.0",
    "scipy>=1.11.4",
    "shapely>=1.8.3",
    "scikit-learn>=1.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.22.10",
    "plotly>=5.22.0",
    "google-cloud-aiplatform>=1.83.0",
    "db-dtypes>=1.0.0",
    "google-cloud-bigquery-storage>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "app/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
